--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="naveenh200621@.com">shyamalakavisha@gmail.com</a></p>
+  <p>Email: <a href="naveenh200621@gmail.com">navenh200621@gmail.com</a></p>
   <p>Phone: +91-9600276481</p>
   <p>Location: Chennai, India</p>
 </section>
